@@ -4,6 +4,9 @@ Changes in Version 0.9-46 (in development)
   o fixed showGrobsBB() and identifyGrob(), was not working for several
     types of grobs.
 
+  o implemented session history: playwith windows load and save history.
+    (based on a suggestion from Liviu Andronic). See ?playwith.history
+
 Changes in Version 0.9-45
 
   o fixed mouse click events under Linux - was interpreted as Alt click
